--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -12,6 +12,7 @@ ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ba
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/tutu0711/hello-tutu/refs/heads/main/Apple.yaml
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=节点选择,[]FINAL
 
