--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -14,12 +14,12 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ch
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/tutu0711/hello-tutu/refs/heads/main/Apple.yaml
 ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/tutu0711/hello-tutu/refs/heads/main/Adobe.yaml
-ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/tutu0711/hello-tutu/refs/heads/main/GoogleCN.yaml
 ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/tutu0711/hello-tutu/refs/heads/main/Microsoft.yaml
 ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/tutu0711/hello-tutu/refs/heads/main/Sony.yaml
 ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/tutu0711/hello-tutu/refs/heads/main/Xbox.yaml
 ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/tutu0711/hello-tutu/refs/heads/main/iCloud.yaml
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
+ruleset=DIRECT,[]GEOSITE,CN
 ruleset=节点选择,[]FINAL
 
 custom_proxy_group=节点选择`select`[]自动选择`[]DIRECT`.*
