--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -16,8 +16,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/mast
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Sony.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Xbox.list
-ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/tutu0711/hello-tutu/refs/heads/main/Apple.yaml
-ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/tutu0711/hello-tutu/refs/heads/main/iCloud.yaml
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Apple.list
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=节点选择,[]FINAL
 
