--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -23,7 +23,7 @@ ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=节点选择,[]FINAL
 
 custom_proxy_group=节点选择`select`[]自动选择`[]DIRECT`.*
-custom_proxy_group=自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,15
+custom_proxy_group=自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,15
 
 enable_rule_generator=true
 overwrite_original_rules=true
