--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -1,8 +1,8 @@
 [custom]
 ;hello-tutu
-ruleset=自动选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
-ruleset=自动选择,[]DOMAIN-SUFFIX,services.googleapis.cn
-ruleset=自动选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+ruleset=节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+ruleset=节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
+ruleset=节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=自动选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Telegram.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -20,9 +20,9 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/mast
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Apple.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Spotify.list
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
-ruleset=自动选择,[]FINAL
+ruleset=节点选择,[]FINAL
 
-custom_proxy_group=自动选择`select`[]自动选择`[]DIRECT`.*
+custom_proxy_group=节点选择`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group=自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,10
 
 enable_rule_generator=true
