--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -1,12 +1,10 @@
 [custom]
 ;hello-tutu
-rule-providers:
-  direct:
-    type: http
-    behavior: domain
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt"
-    path: ./ruleset/direct.yaml
-    interval: 86400
+ruleset=DIRECT,[]GEOIP,CN,no-resolve
+ruleset=节点选择,[]FINAL
+
+custom_proxy_group=节点选择`select`[]自动选择`[]DIRECT`.*
+custom_proxy_group=自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,10
 
 enable_rule_generator=true
 overwrite_original_rules=true
