--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -1,6 +1,6 @@
 [custom]
 ;hello-tutu  
-ruleset=DIRECT,[]GEOIP,CN,no-resolve
+ruleset=DIRECT,[]GEOIP,CN
 ruleset=节点选择,[]FINAL
 
 custom_proxy_group=节点选择`select`[]自动选择`[]DIRECT`.*
