--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -1,5 +1,14 @@
 [custom]
-;hello-tutu  
+;hello-tutu
+
+rule-providers:
+  telegramcidr:
+    type: http
+    behavior: ipcidr
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/telegramcidr.txt"
+    path: ./ruleset/telegramcidr.yaml
+    interval: 86400
+    
 ;ruleset=节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Surge/Copilot/Copilot.list
 ruleset=节点选择,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt
 ruleset=节点选择,[]FINAL
