--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -1,16 +1,15 @@
 [custom]
 ;hello-tutu
 
-rule-providers:
-  telegramcidr:
+telegramcidr:
     type: http
     behavior: ipcidr
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/telegramcidr.txt"
     path: ./ruleset/telegramcidr.yaml
     interval: 86400
-    
+
 ;ruleset=节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Surge/Copilot/Copilot.list
-ruleset=节点选择,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt
+ruleset=节点选择,telegramcidr
 ruleset=节点选择,[]FINAL
 
 custom_proxy_group=节点选择`select`[]自动选择`[]DIRECT`.*
