--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -1,7 +1,46 @@
 [custom]
 ;hello-tutu
+- SRC-IP-CIDR,192.168.100.235/32,DIRECT # switch
+- SRC-IP-CIDR,192.168.100.231/32,DIRECT # xbox
+- SRC-IP-CIDR,192.168.100.146/32,DIRECT # ps5
+- SRC-IP-CIDR,192.168.100.192/32,DIRECT # 电视
+##google
+- geosite,google,节点选择
+##
+- DOMAIN,lmspeed_dy.lmspeedapp.com,DIRECT
+- DOMAIN-SUFFIX,services.googleapis,节点选择
+- DOMAIN-SUFFIX,safebrowsing.apple,节点选择
+- DOMAIN-SUFFIX,gsas.apple.com,节点选择
+- DOMAIN-SUFFIX,btsow.motorcycles,节点选择
+- DOMAIN-SUFFIX,cloudflare.com,节点选择
+- DOMAIN-SUFFIX,gov.uk,DIRECT
+- DOMAIN-SUFFIX,spotifycdn.com,DIRECT
+- DOMAIN-SUFFIX,spotify.com,节点选择
+- DOMAIN-SUFFIX,speedtest,DIRECT
+- DOMAIN-SUFFIX,octopus-cards.com,DIRECT
+- DOMAIN-SUFFIX,appstorrent.ru,DIRECT
+ ##
+- IP-CIDR,127.0.0.0/8,DIRECT
+- IP-CIDR,172.16.0.0/12,DIRECT
+- IP-CIDR,192.168.0.0/16,DIRECT
+- IP-CIDR,10.0.0.0/8,DIRECT
+- IP-CIDR,17.0.0.0/8,DIRECT
+- IP-CIDR,100.64.0.0/10,DIRECT
+- IP-CIDR,224.0.0.0/4,DIRECT
+- IP-CIDR6,fe80::/10,DIRECT
+ # Apple域名
+- geosite,apple,DIRECT
+ # ps5服务
+- geosite,playstation,DIRECT 
+- geosite,sony,DIRECT
 ;ruleset=节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Surge/Copilot/Copilot.list
 ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/BanAD.list
+ # 大陆域名
+- geosite,cn,DIRECT
+ # 大陆IP
+- geoip,cn,DIRECT
+ # 非大陆域名
+- geosite,geolocation-!cn,节点选择
 ruleset=节点选择,[]FINAL
 
 custom_proxy_group=节点选择`select`[]自动选择`[]DIRECT`.*
