--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -2,11 +2,13 @@
 ;hello-tutu
 ;ruleset=节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Surge/Copilot/Copilot.list
 ;ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/BanAD.list
-ruleset=DIRECT,[]geosite,apple-cn,DIRECT
-ruleset=DIRECT,[]geosite,cn
-ruleset=DIRECT,[]geoip,cn
-ruleset=节点选择,[]geosite,google
-ruleset=节点选择,[]geosite,geolocation-!cn
+
+ruleset=DIRECT,[]GEOSITE,apple-cn
+ruleset=DIRECT,[]GEOSITE,cn
+ruleset=DIRECT,[]GEOIP,cn
+ruleset=节点选择,[]GEOSITE,google
+ruleset=节点选择,[]GEOSITE,geolocation-!cn
+
 ruleset=节点选择,[]FINAL
 
 custom_proxy_group=节点选择`select`[]自动选择`[]DIRECT`.*
