--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -3,7 +3,7 @@
 ;ruleset=节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Surge/Copilot/Copilot.list
 ;ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/BanAD.list
 
-ruleset=DIRECT,[]GEOSITE,playstation.com
+ruleset=DIRECT,[]GEOSITE,playstation
 ruleset=DIRECT,[]GEOSITE,sony
 ruleset=DIRECT,[]GEOSITE,apple
 ruleset=DIRECT,[]GEOSITE,cn
