--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -11,7 +11,7 @@ ruleset=DIRECT,[]GEOIP,cn
 ruleset=节点选择,[]GEOSITE,google
 ruleset=节点选择,[]GEOSITE,geolocation-!cn
 
-ruleset=DIRECT,[]FINAL
+ruleset=节点选择,[]FINAL
 
 custom_proxy_group=节点选择`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group=自动选择`url-test`.*`http://www.google-analytics.com/generate_204`300,,8
