--- a/hello-tutu.ini
+++ b/hello-tutu.ini
@@ -6,7 +6,7 @@
 ruleset=节点选择,[]FINAL
 
 custom_proxy_group=节点选择`select`[]自动选择`[]DIRECT`.*
-custom_proxy_group=自动选择`url-test`.*`http://www.google-analytics.com/generate_204`300,,8
+custom_proxy_group=自动选择`url-test`.*`https://cp.cloudflare.com`300,,15
 
 enable_rule_generator=true
 overwrite_original_rules=true
